# Esh

./: Cargo.toml  LICENSE  README.md
codegen/: Cargo.toml
codegen/examples/: ambiguity.dfbin  basic.dfa  basic.dfbin  basic.esh  dfasm.dfa  dfasm.dfbin  dfasm.esh  events copy.esh  events.dfa  events.dfbin  events.esh  events_full.esh  hello.dfa  hello.dfbin  hello.esh  implicit_casts.esh  less.dfa  line_splitting.dfa  lists.dfa  lists.dfbin  lists.esh  longaccess.dfbin  minesweeper.dfa  minesweeper.dfbin  minesweeper.esh  minesweeper_cantparse.esh  more.dfa  more.dfbin  more.esh  practical_dfasm.dfbin  practical_dfasm.esh  refactor.dfa  refactor.dfbin  refactor.esh  struct_functions.esh  test.dfa  vecs.dfbin  vecs.esh
codegen/src/: buffer.rs  codegen.rs  constants.rs  context.rs  definition.rs  errors.rs  lib.rs  semanticnode.rs  types.rs
esh/: Cargo.toml
esh_parser/: Cargo.toml
esh_parser/src/: parser.rs
examples/: brainstorm-exceptions.dfa  brainstorm1-compiled.dfa  brainstorm1-something.esh  brainstorm1-tictactoe.esh  brainstorm2-assembled.dfbin  brainstorm2-compiled.dfa  brainstorm2-scorepvp.esh  brainstorm3-skyminer.esh  feji-brainstorm.go  test-compiled.dfa
lexer/: Cargo.toml
lexer/src/: errors.rs  lexer.rs  lib.rs  types.rs
optimizer/: Cargo.toml
optimizer/examples/: bla.dfa  bla_before.dfa  bla_optimized.dfa  else_before.dfa  else_optimized.dfa  first_before.dfa  first_optimized.dfa  huh.dfa  longif.dfa  longif_before.dfa  longif_optimized.dfa  lotsa.dfa  lotsa_before.dfa  lotsa_optimized.dfa  (+3 more)
parser/: Cargo.toml
std/: Player.dfa  Player.esh
(+27 files in other folders)
